增强第二卷第2-6章内容深度
第二章 内存模型：
- 补充动态链接的作用和与多态的关联
- 补充 Eden 共享区 CAS 分配的伪代码
- 补充动态年龄判定的具体数字示例
- CodeCache 独立成小节，讲清满的后果
- 展开 Cleaner 虚引用工作原理
- 新增 G1 字符串去重（UseStringDeduplication）

第三章 对象模型：
- 补充 64 位 Mark Word 完整位布局图
- 展开 wait/notify 从 WaitSet 到 EntryList 的完整流程
- 补充 TLAB 关键参数和碎片化问题
- 补充逃逸分析的四个实际局限

第四章 垃圾回收：
- 新增跨代引用问题（卡表 + 写屏障）
- ZGC 染色指针位布局 + 读屏障工作流程 + 分代 ZGC
- 新增 Shenandoah 与 ZGC 对比
- 新增 GC 日志实战分析案例
- 新增 GC 选择决策树

第五章 JIT 编译：
- 新增 OSR（On-Stack Replacement）机制
- 补充 CHA 编译时去虚化 vs profiling 推测性去虚化
- 补充向量化验证方法（JIT 日志 + JMH perfasm）
- 新增 JIT 生产问题（CodeCache 满、编译线程 CPU、逆优化风暴）

第六章 线上排查：
- CPU 100% 补充四种常见根因及 thread dump 特征
- MAT 新增完整的内存泄漏分析实战案例
- Thread Dump 新增多线程 BLOCKED 场景分析
- JFR 新增完整的 JMC 分析实战案例
- 新增工具选择指南决策表
- 新增端到端排查案例（接口变慢全流程）