@@ -32,7 +32,45 @@ printf "%x\n" <tid>
 jstack <pid> | grep -A 30 "<tid in hex>"
 ```
 
-输出的栈信息会告诉你这个线程在执行什么代码——是死循环、是正则回溯、还是锁竞争。
+输出的栈信息会告诉你这个线程在执行什么代码。常见的根因有四种：
+
+**根因一：死循环或正则回溯**
+
+```
+"Thread-1" #12 prio=5 os_prio=0 cpu=985421.23ms
+   java.lang.Thread.State: RUNNABLE
+    at com.example.Processor.process(Processor.java:45)  ← 死循环位置
+    at com.example.Handler.handle(Handler.java:23)
+```
+
+特征：线程状态为 RUNNABLE，CPU 时间极高。如果是正则回溯（ReDoS），栈顶通常有 `java.util.regex.Pattern` 相关方法。
+
+**根因二：GC 线程占用**
+
+```
+"GC task thread#0 (ParallelGC)" os_prio=0 cpu=892341.56ms
+```
+
+特征：`top -Hp` 中 CPU 最高的不是应用线程而是 GC 线程。说明频繁 GC 导致 CPU 被 GC 线程占用。先查 GC 日志，确认是否 FGC 频繁。
+
+**根因三：锁竞争（自旋）**
+
+```
+"Thread-2" #13 prio=5 os_prio=0 cpu=567823.12ms
+   java.lang.Thread.State: RUNNABLE
+    at com.example.SharedResource.access(SharedResource.java:30)
+    - waiting to lock <0x00000007aab3a0d0>  ← 等待锁
+```
+
+特征：多个线程状态为 BLOCKED 或 RUNNABLE 但都在等同一把锁。持锁线程可能在做慢操作（I/O、慢查询）。
+
+**根因四：JIT 编译**
+
+```
+"CompilerThread0" os_prio=0 cpu=345212.78ms
+```
+
+特征：`top -Hp` 中 CPU 最高的是 `CompilerThread`，说明 JIT 正在编译大量代码。通常是正常的预热行为，如果持续占用则需检查 CodeCache。
 
 ---
 
@@ -61,6 +99,43 @@ heapdump /path/to/heap.hprof
 **3. Dominator Tree。** 找到阻止 GC 回收的最大对象——这些对象持有了大量其他对象的引用。
 
 **4. Path to GC Roots。** 从某个对象出发，追溯到 GC Root 的引用链。回答"为什么这个对象没有被回收"。
+
+### MAT 实战：分析一次内存泄漏
+
+**场景：** 应用运行一段时间后 OOM，拿到 dump 文件用 MAT 分析。
+
+**第一步：打开 Leak Suspects Report**
+
+MAT 自动分析后报告：
+
+```
+Problem Suspect 1:
+  4,523 instances of "com.example.CacheEntry", loaded by "app classloader"
+  occupy 1,892,345,678 bytes (45.2% of heap)
+
+  These instances are referenced from:
+    java.util.HashMap @ 0x7f8b2c012340
+      → com.example.CacheManager.cache (CacheManager.java:15)
+```
+
+MAT 告诉你：`CacheEntry` 对象占了堆的 45%，被 `CacheManager` 的 `cache` 字段（一个 HashMap）持有。
+
+**第二步：用 Dominator Tree 确认**
+
+打开 Dominator Tree，按 Retained Heap 排序：
+
+```
+com.example.CacheManager @ 0x7f8b2c012300
+  └─ java.util.HashMap @ 0x7f8b2c012340
+       └─ java.util.HashMap$Node[16384] @ 0x7f8b2c020000
+            └─ 4,523 x CacheEntry (每个 418KB)
+```
+
+`CacheManager` 的 Retained Heap = 1.8GB，它阻止了这 4,523 个 CacheEntry 被 GC 回收。
+
+**第三步：定位代码**
+
+CacheManager 是一个单例，`cache` 字段是一个只增不减的 HashMap。添加 TTL 和容量限制后问题解决。
 
 ---
 
@@ -98,6 +173,44 @@ Found one Java-level deadlock:
 ```
 
 ---
+
+### 非死锁场景：多线程 BLOCKED 在同一把锁
+
+比死锁更常见的情况是多个线程 BLOCKED 在同一把锁上：
+
+```
+"http-nio-8080-exec-1" #15 prio=5
+   java.lang.Thread.State: BLOCKED
+    at com.example.OrderService.createOrder(OrderService.java:30)
+    - waiting to lock <0x00000007aab3a0d0> (a java.lang.Object)
+    which is held by "http-nio-8080-exec-5"
+
+"http-nio-8080-exec-2" #16 prio=5
+   java.lang.Thread.State: BLOCKED
+    at com.example.OrderService.createOrder(OrderService.java:30)
+    - waiting to lock <0x00000007aab3a0d0> (a java.lang.Object)
+    which is held by "http-nio-8080-exec-5"
+
+"http-nio-8080-exec-3" #17 prio=5
+   java.lang.Thread.State: BLOCKED
+    at com.example.OrderService.createOrder(OrderService.java:30)
+    - waiting to lock <0x00000007aab3a0d0> (a java.lang.Object)
+    which is held by "http-nio-8080-exec-5"
+```
+
+三个线程都在等同一把锁，持锁线程是 `exec-5`。接下来搜索 `exec-5` 的栈信息：
+
+```
+"http-nio-8080-exec-5" #20 prio=5
+   java.lang.Thread.State: RUNNABLE
+    at java.net.SocketInputStream.socketRead0(Native Method)
+    at com.example.OrderService.createOrder(OrderService.java:31)
+    - locked <0x00000007aab3a0d0> (a java.lang.Object)
+```
+
+`exec-5` 持有锁，但在做网络 I/O（socketRead0）——它在等数据库响应。这就是所有其他线程被阻塞的根因：**持锁线程在同步 I/O 上阻塞**。
+
+修复方向：将同步 I/O 移出 synchronized 块，或改用异步 I/O。
 
 ## 6.5 Arthas 核心命令
 
@@ -189,9 +302,101 @@ jmc
 
 JMC 提供自动分析功能，能标记出潜在的性能问题（如"方法编译时间过长"、"GC 停顿过长"）。JFR 的优势是开销极低（< 1%），适合生产环境 7×24 持续录制。
 
+### JFR 分析实战
+
+**场景：** 用 JFR 录制了 60 秒的生产环境运行数据，用 JMC 打开分析。
+
+**第一步：看 JMC 的自动分析结果**
+
+JMC 打开 `.jfr` 文件后，左侧 "Rule Results" 中自动标记了问题：
+
+```
+⚠️ Hot Methods:
+  com.example.QueryBuilder.buildQuery() — 占用 12.3% CPU
+  java.util.regex.Pattern.matches() — 占用 8.7% CPU
+
+⚠️ GC Stall:
+  GC 暂停时间平均 234ms，超过阈值 200ms
+
+⚠️ Lock Instances:
+  java.util.concurrent.ConcurrentHashMap @ 0x7f8b — 平均等待 45ms
+```
+
+**第二步：看 CPU 热点**
+
+点击 "Hot Methods"，看到 `QueryBuilder.buildQuery()` 消耗了 12.3% CPU。展开调用栈，发现这个方法在循环中反复拼接字符串。
+
+**第三步：看内存分配**
+
+点击 "Allocation"，发现 `QueryBuilder` 每次调用分配了大量临时 `StringBuilder` 和 `String` 对象。这些对象在新生代被快速回收，但频繁分配导致 Young GC 频繁。
+
+**第四步：修复**
+
+将字符串拼接改为预分配的 `StringBuilder`，减少临时对象分配。再次录制确认 CPU 和 GC 均有改善。
+
 ---
 
-## 6.7 JVM 核心参数速查
+## 6.7 工具选择指南
+
+遇到问题时，选对工具能事半功倍：
+
+| 问题类型 | 首选工具 | 辅助工具 |
+|---------|---------|---------|
+| CPU 高 | `top -Hp` + `jstack` | Arthas `thread -n 3` |
+| 内存泄漏 / OOM | `-XX:+HeapDumpOnOutOfMemoryError` + MAT | Arthas `heapdump` + `dashboard` |
+| GC 问题 | GC 日志（`-Xlog:gc*`）+ `jstat` | JFR 的 GC 事件 |
+| 接口变慢 | Arthas `trace` | JFR CPU 热点 |
+| 锁竞争 | `jstack` / Arthas `thread -b` | JFR 的 Lock 事件 |
+| 确认线上代码 | Arthas `jad` | — |
+| 综合性能分析 | JFR（持续录制） | JMC 可视化分析 |
+| CodeCache 问题 | `jstat -compiler` | `-Xlog:compilation*` |
+
+### 端到端排查案例：接口变慢
+
+**现象：** 某个 API 接口从 200ms 降到 3 秒。
+
+**第一步：快速定位是 CPU 问题还是 GC 问题**
+
+```bash
+# 看 GC 日志
+tail -f gc.log
+# 发现每 2 分钟一次 Full GC，每次耗时 1.5 秒 → GC 问题
+
+# 确认堆状态
+jstat -gcutil <pid> 1000
+# O 区持续增长到 99% 后触发 FGC
+```
+
+**第二步：找到老年代中的大对象**
+
+```bash
+# 生成 dump（线上慎用，会触发 Full GC）
+jmap -dump:format=b,file=heap.hprof <pid>
+
+# 或用 Arthas（不触发 GC）
+heapdump /tmp/heap.hprof
+```
+
+**第三步：MAT 分析**
+
+Leak Suspects Report 显示 `com.example.ReportGenerator` 持有了 2GB 的 `ArrayList<ReportData>`。
+
+**第四步：定位代码**
+
+```bash
+# 用 Arthas 反编译线上代码
+jad com.example.ReportGenerator
+```
+
+发现 `ReportGenerator` 在每次请求时将数据加入一个静态 `ArrayList`，但从不清理。
+
+**第五步：修复并验证**
+
+将 `ArrayList` 改为请求级局部变量，或添加清理逻辑。修复后部署，用 `jstat` 确认老年代使用率稳定，Full GC 消失。
+
+---
+
+## 6.8 JVM 核心参数速查
 
 | 类别 | 参数 | 说明 |
 |------|------|------|
